<resources>
    <string name="app_name">Shoppan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_to_your_account">Silakan masuk ke akun Anda</string>
    <string name="username">Username</string>
    <string name="password">Kata Sandi</string>
    <string name="sign_in">Masuk</string>
    <string name="don_t_have_an_account_sign_up">Belum punya akun? Daftar</string>
    <string name="create_your_account">Buat akun Anda</string>
    <string name="email">Email</string>
    <string name="sign_up">Daftar</string>
    <string name="phone_number">No. Telepon</string>
    <string name="personal_data">Data Diri</string>
    <string name="name">Nama</string>
    <string name="school">Sekolah</string>
    <string name="address">Alamat</string>
    <string name="save">Simpan</string>
    <string name="add_photo_profile">Tambahkan Foto Profil</string>
    <string name="product_name">Nama Produk</string>
    <string name="product_price">Harga Produk</string>
    <string name="seller_name">Nama Penjual</string>
    <string name="school_name">Asal Sekolah</string>
    <string name="description">Deskripsi</string>
    <string name="description_content">Baso Aci merupakan salah satu jajanan terkenal asal Jawa Barat yang memiliki cita rasa asin lada asem di campur jadi satu dengan berbagai macam tambahan toping. Baso Aci ini memiliki tekstur yang kenyal kerena terbuat dari tepung sagu dengan tambahan toping berupa cuangki, tahu dan sukro.</string>
    <string name="buy_now">Beli Sekarang</string>
    <string name="start_selling">Mulai Jualan</string>
    <string name="view_profile">Lihat Profil</string>
    <string name="name_account">Name Account</string>
    <string name="profile">Profil</string>
    <string name="add_product">Tambah Produk</string>
    <string name="category">Kategori</string>
    <string name="product_description">Deskripsi Produk</string>
    <string name="price">Harga</string>
    <string name="upload">Unggah</string>
    <string name="add_product_picture">Tambahkan Foto Produk</string>
    <string name="home">Home</string>
    <string name="save_icon">Save</string>
    <string name="account">Account</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.bottomnavigation.BottomNavigationView$Behavior</string>

</resources>