<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_header_sign_up"
        style="@style/TextHeader.22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_90sdp"
        android:text="@string/create_your_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_container_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_54sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header_sign_up">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_28sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/nunito"
                android:hint="@string/email"
                android:singleLine="true"
                android:textColorHint="@color/abu"
                android:textSize="@dimen/_13ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_28sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/nunito"
                android:hint="@string/password"
                android:singleLine="true"
                android:textColorHint="@color/abu"
                android:textSize="@dimen/_13ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_username_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_28sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/nunito"
                android:hint="@string/username"
                android:singleLine="true"
                android:textColorHint="@color/abu"
                android:textSize="@dimen/_13ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_margin="@dimen/_24sdp"
                android:fontFamily="@font/nunito"
                android:singleLine="true"
                android:text="@string/sign_up"
                android:textSize="@dimen/_16ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>