<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_160sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_food" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_nameAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/nunito"
            android:text="@string/name_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_lihatProfil"
            style="@style/TextButton.14.noBold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/view_profile"
            android:textAlignment="center"
            app:cornerRadius="@dimen/_6sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mulaiJualan"
            style="@style/TextButton.14.noBold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/start_selling"
            android:textAlignment="center"
            android:textColor="@color/yellow_primary"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/_6sdp"
            app:strokeColor="@color/yellow_primary"
            app:strokeWidth="@dimen/_1sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>