<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_primary"
            android:paddingStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            tools:ignore="RtlSymmetry">

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_245sdp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_detail"
            android:src="@drawable/ic_launcher_background" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ly_productData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/iv_product_image">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_productName"
                style="@style/TextTitleSemiBold.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_productPrice"
                style="@style/TextTitleSemiBold.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/product_price"
                android:textSize="@dimen/_16ssp" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@color/white2" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ly_dataPenjual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ly_productData">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profilPenjual"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_food" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_namaPenjual"
                    style="@style/TextFooter.12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_asalSekolah"
                    style="@style/TextFooter.12.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="@dimen/_4sdp"
                    android:text="SMKN 8 Semarang" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ly_deskripsiProduk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_dataPenjual">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextFooter.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_isiDeskripsi"
                style="@style/TextDescription.12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/description_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ly_beliSekarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_deskripsiProduk"
            tools:ignore="NotSibling">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_4sdp"
                android:backgroundTint="@color/yellow_primary"
                app:strokeWidth="0dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_save"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/yellow_primary"
                    android:src="@drawable/ic_bookmark_outlined" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_buy_now"
                style="@style/TextButton.14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buy_now"
                android:textAlignment="center"
                app:cornerRadius="@dimen/_6sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>